# dynamic-island-lyrics

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js  player.html  player.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
