[package]
name = "lyric-island"
version = "0.1.0"
description = "Dynamic Lyrics Island - Local Music Player"
authors = ["bailaiowo"]
edition = "2021"

[lib]
name = "lyric_island_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.20", features = ["symphonia-all"] }
regex = "1"
ureq = { version = "2", features = ["json"] }
